# diesel-experiments

./: CHATGPT_INSTRUCTIONS.md  Cargo.toml  README.md  justfile  listen_events.py
actions/: Start-Service.ps1  Stop-Service.ps1
diesel_event_test/: Cargo.toml  diesel.toml
diesel_event_test/src/: listen_events.rs  send_event.rs
migrations/2024-11-29-022339_create_events/: up.sql
src/: listen_events.rs  schema.rs
